--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144747776-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-144747776-1');
+    </script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -17,23 +24,29 @@
   <!-- built files will be auto injected -->
   </body>
   <script src="https://danbee.ai/js/plugins/frogue-embed/frogue-embed.min.js"></script>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144747776-1"></script>
+  <script src="https://kit.fontawesome.com/abd5fee7a3.js"></script>
   <script>
     var agent = navigator.userAgent.toLowerCase();
     if (agent.indexOf('chrome') === -1 || agent.indexOf('edge') > -1 || agent.indexOf('opr') > -1){
       alert("해당 사이트는 크롬에 최적화 되어 있습니다.");
     }
-    Notification.requestPermission().then((permission) => {
-      if (permission === 'granted') {
-        console.log('Notification permission granted.');
-      } else {
-        console.log('Unable to get permission to notify.');
-      }
-    });
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'UA-144747776-1');
   </script>
-  <script src="https://kit.fontawesome.com/abd5fee7a3.js"></script>
+  <script>
+    (function(w, d, s, g, js, fs) {
+      g = w.gapi || (w.gapi = {});
+      g.analytics = {
+        q: [],
+        ready: function(f) {
+          this.q.push(f);
+        }
+      };
+      js = d.createElement(s);
+      fs = d.getElementsByTagName(s)[0];
+      js.src = "https://apis.google.com/js/platform.js";
+      fs.parentNode.insertBefore(js, fs);
+      js.onload = function() {
+        g.load("analytics");
+      };
+    })(window, document, "script");
+  </script>
 </html>
